src/objects/Analytical_Snapshot_object__c.object
<CustomObject>
    <fields>
        <fullName>Covered_Lives__c</fullName>
        <label>Covered Lives</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Name__c</fullName>
        <label>Opportunity Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Analytical Snapshot object</label>
    <nameField>
        <label>Analytical Snapshot object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Analytical Snapshot object</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>